regression OpenCL split: access violation #45484

Closed
opened 2015-07-18 22:45:55 +02:00 by mathieu menuet · 9 comments

System Information
Win7x64, AMD 280X, Catalyst 15.7

Blender Version
Broken: 2ccfbf2
Worked: 2.75a official

Short description of error
When canceling a render and then hit F12 to try to rerender, blender crashes

Exact steps for others to reproduce the error
Render a scene, hit escape while rendering (must have several tile to cancel before image is finished), hit F12 again: it crashes because of an access violation.

**System Information** Win7x64, AMD 280X, Catalyst 15.7 **Blender Version** Broken: 2ccfbf2 Worked: 2.75a official **Short description of error** When canceling a render and then hit F12 to try to rerender, blender crashes **Exact steps for others to reproduce the error** Render a scene, hit escape while rendering (must have several tile to cancel before image is finished), hit F12 again: it crashes because of an access violation.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli
Author

Exact error message is :

OpenCL error (-33): CL_INVALID_DEVICE
OpenCL: failed to initialize device.
Error: EXCEPTION_ACCESS_VIOLATION
Exact error message is : ``` OpenCL error (-33): CL_INVALID_DEVICE OpenCL: failed to initialize device. Error: EXCEPTION_ACCESS_VIOLATION ```

Added subscriber: @Sergey

Added subscriber: @Sergey

Please attach system-info.txt generated by Help -> System Info and also console output of blender running with --debug-cycles command line argument.

Please attach system-info.txt generated by `Help -> System Info` and also console output of blender running with `--debug-cycles` command line argument.

On another hand seems i can reproduce the issue now. Needed to create a release build. Fix coming.

On another hand seems i can reproduce the issue now. Needed to create a release build. Fix coming.

This issue was referenced by 4bca8a6bc5

This issue was referenced by 4bca8a6bc5fe34b7c7c58cbdbc3454bfc444d5be

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@b1b270a77f

This issue was referenced by blender/cycles@b1b270a77fa1f8e5ccf49496c616b4a44854e282
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45484
No description provided.