Fix T45484: Regression OpenCL split: access violation

That was a primary school error caused by moving statements inside assert()
which effectivly disabled crucial code in release builds.